# compass-ecl-mas

./: CITATION.bib  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
configs/: education_paper.yaml  education_quick.yaml  education_systems_v1.yaml  education_uci.yaml
data/uci_student/: uci_student_processed.csv
docs/: CITATION.md  DESIGN_RATIONALE.md  DOCKER.md  PUSH_WIKI.md
docs/wiki/: Data.md  Decision-Brief.md  FAQ.md  Getting-Started.md  Home.md  How-to-Cite.md  Method-ECL-MAS.md  Overleaf-Integration.md  Reproducibility-and-Artifacts.md  Running-Experiments.md  Streamlit-App.md
scripts/: fetch_uci_student_performance.py  generate_data.py
src/compass_ecl_mas/: data.py  fairness_postproc.py  pipeline.py  utils.py
src/compass_ecl_mas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/compass_ecl_mas/baselines/: __init__.py  fairlearn_reductions.py
src/compass_ecl_mas/cli/: make_figures.py  run_all.py
src/compass_ecl_mas/ecl/: engine.py
src/compass_ecl_mas/metrics/: cost.py  explainability.py  fairness.py  performance.py
src/compass_ecl_mas/models/: baselines.py
src/compass_ecl_mas/pareto/: mas.py  pareto.py
src/compass_ecl_mas/reporting/: decision_brief_pdf.py  paper_assets.py
src/compass_ecl_mas/simulator/: education.py
src/compass_ecl_mas/viz/: __init__.py  paper_figures.py
